	'conf/my.cnf-SystemA-sample' and 'conf/my.cnf-SystemB-sample'.
	* Added 'conf/aman-mysql-limits.conf'.
2013-06-25 Fred Gleason <fredg@paravelsystems.com>
	* Added 'scripts/aman_add_rivendell_user.pl'.
	* Added 'scripts/aman_add_replication_users.pl'.
	* Updated 'INSTALL'.
2013-06-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.1.
2013-07-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 30 second hold-off between normal invocations of
	rsync(1) in 'amand/audiostore.cpp'.
	* Added a 'NiceLevel=' parameter to aman.conf(5).
2013-07-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.2.
2013-07-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'Makefile.am' that broke the 'make rpm'
	target on CentOS 6.0.
2013-07-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.3.
2013-07-02 Fred Gleason <fredg@paravelsystems.com>
	* Added 'conf/rsync.xinetd-sample'.
	* Updated 'INSTALL'.
2013-07-02 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'Service Running' indicators to the header
	section of aman(8) in 'aman/aman.cpp'.
	* Updated 'INSTALL'.
	* Updated 'README'.
2013-07-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'FromAddress=' directive to the [Global] section
	of aman.conf(5) in 'lib/config.cpp' and 'lib/config.h'.
	* Fixed a bug in 'amand/amand.cpp' that caused false positive
	detections of database replication failure.
2013-07-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.4.
2013-11-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'amand/auto_rotate.cpp' that caused log
	autorotation to occur at incorrect times.
	* Fixed a bug in 'amand/pingmonitor.cpp' that caused current
	DB sanpshots to be purged prematurely.
2013-11-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.5.
2014-07-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in 'INSTALL'.