@@ -373,18 +373,18 @@ void MainObject::commandReceivedData(int id,int cmd,const QStringList &args)
     filename=MakeSnapshotName();
     if(GenerateMysqlSnapshot(QString(AM_SNAPSHOT_DIR)+"/"+filename)) {
       outargs.push_back(filename);
+      main_state->setDbState(State::StateMaster);
+      main_monitor->setThisDbState(State::StateMaster);
+      main_state->setCurrentSnapshot(Am::This,filename);
+      main_monitor->setThisSnapshotName(filename);
+      main_cmd_server->sendCommand(id,Am::MakeMasterCommand,outargs);
+      SendAlert("Database Replication State changed to MASTER on server \""+
+		main_config->hostname(Am::This)+"\".");
+      syslog(LOG_INFO,"state changed to MASTER");
     }
     else {
       outargs.push_back("-");
     }
-    main_state->setDbState(State::StateMaster);
-    main_monitor->setThisDbState(State::StateMaster);
-    main_state->setCurrentSnapshot(Am::This,filename);
-    main_monitor->setThisSnapshotName(filename);
-    main_cmd_server->sendCommand(id,Am::MakeMasterCommand,outargs);
-    SendAlert("Database Replication State changed to MASTER on server \""+
-	      main_config->hostname(Am::This)+"\".");
-    syslog(LOG_INFO,"state changed to MASTER");
     break;
 
   case Am::MakeSlaveCommand:
@@ -394,14 +394,14 @@ void MainObject::commandReceivedData(int id,int cmd,const QStringList &args)
       main_state->setDbState(State::StateSlave);
       main_monitor->setThisDbState(State::StateSlave);
       outargs.push_back(main_state->currentSnapshot(Am::That));
+      main_cmd_server->sendCommand(id,Am::MakeSlaveCommand,outargs);
+      SendAlert("Database Replication State changed to SLAVE on server \""+
+		main_config->hostname(Am::This)+"\".");
+      syslog(LOG_INFO,"state changed to SLAVE");
     }
     else {
       outargs.push_back("-");
     }
-    main_cmd_server->sendCommand(id,Am::MakeSlaveCommand,outargs);
-    SendAlert("Database Replication State changed to SLAVE on server \""+
-	      main_config->hostname(Am::This)+"\".");
-    syslog(LOG_INFO,"state changed to SLAVE");
     break;
 
   case Am::MakeIdleCommand:
